💄(frontend) refactor feedbacks screen
Enhance initial screen. Allow user returning to the meeting.
Also, add basic and non-functional rating component to mock,
what the form would be.

--- a/src/frontend/src/locales/de/rooms.json
+++ b/src/frontend/src/locales/de/rooms.json
@@ -1,7 +1,8 @@
 {
   "feedback": {
-    "body": "",
-    "heading": ""
+    "heading": "",
+    "home": "",
+    "back": ""
   },
   "join": {
     "videoinput": {
@@ -108,6 +109,14 @@
   },
   "chat": {
     "disclaimer": ""
+  },
+  "rating": {
+    "submit": "",
+    "question": "",
+    "levels": {
+      "min": "",
+      "max": ""
+    }
   },
   "participants": {
     "subheading": "",
