💩(frontend) introduce multistep form
Add an open feedback form step, to allow people giving us some
feedbacks on what's wrong with our product.

--- a/src/frontend/src/locales/de/rooms.json
+++ b/src/frontend/src/locales/de/rooms.json
@@ -118,6 +118,16 @@
       "max": ""
     }
   },
+  "openFeedback": {
+    "question": "",
+    "placeholder": "",
+    "submit": "",
+    "skip": ""
+  },
+  "confirmationMessage": {
+    "heading": "",
+    "body": ""
+  },
   "participants": {
     "subheading": "",
     "contributors": "",
