--- a/src/frontend/src/locales/en/rooms.json
+++ b/src/frontend/src/locales/en/rooms.json
@@ -116,6 +116,16 @@
       "max": "excellent"
     }
   },
+  "openFeedback": {
+    "question": "What can we do to improve Visio?",
+    "placeholder": "Describe your bugs or share your suggestions…",
+    "submit": "Submit",
+    "skip": "Skip"
+  },
+  "confirmationMessage": {
+    "heading": "Thank you for your submission",
+    "body": "Our product team takes the time to carefully review your feedback. We will get back to you as soon as possible."
+  },
   "participants": {
     "subheading": "In room",
     "you": "You",
