💄(frontend) adjust home based on Sam feedbacks
Based on Samuel's feedbacks, adjust few details.

--- a/src/frontend/src/locales/en/global.json
+++ b/src/frontend/src/locales/en/global.json
@@ -7,7 +7,7 @@
     "heading": "An error occurred while loading the page"
   },
   "feedback": {
-    "context": "Visio is still evolving—your input matters!",
+    "context": "Visio is still in early development — your input matters!",
     "cta": "Share your feedback"
   },
   "forbidden": {
