--- a/src/frontend/src/locales/en/home.json
+++ b/src/frontend/src/locales/en/home.json
@@ -44,7 +44,7 @@
     },
     "slide2": {
       "title": "Host group calls without limits",
-      "body": "Unlimited time meetings, up to 15 participants, with smooth and high-quality communication, no matter the group size.",
+      "body": "Unlimited time meetings, with smooth and high-quality communication, no matter the group size.",
       "imgAlt": "Image of a virtual meeting with multiple participants collaborating seamlessly"
     },
     "slide3": {
