💬(frontend) rename Agent Connect mentions
Feedback from C Chausse. Outdated copy writting.

--- a/src/frontend/src/locales/en/home.json
+++ b/src/frontend/src/locales/en/home.json
@@ -19,7 +19,7 @@
   },
   "laterMeetingDialog": {
     "heading": "Your connection details",
-    "description": "Send this link to the people you want to invite to the meeting. They will be able to join without Agent Connect.",
+    "description": "Send this link to the people you want to invite to the meeting. They will be able to join without ProConnect.",
     "copy": "Copy the meeting link",
     "copied": "Link copied to clipboard",
     "permissions": "People with this link do not need your permission to join this meeting."
