💄(front) enhance ui first shot
Based on recent sketches, we decided to implement the new ui. This is
a first shot, more will be coming next.

--- a/src/frontend/src/locales/en/rooms.json
+++ b/src/frontend/src/locales/en/rooms.json
@@ -29,6 +29,7 @@
   "leaveRoomPrompt": "This will make you leave the meeting.",
   "shareDialog": {
     "copy": "Copy the meeting link",
+    "copyButton": "Copy link",
     "copied": "Link copied to clipboard",
     "heading": "Your meeting is ready",
     "description": "Share this link with people you want to invite to the meeting.",
