🚧(frontend) add a temporary items to interact with transcription
This is totally temporary, only to test transcription recording.
In the upcoming commits, a proper side panel with all activities
will be created.

--- a/src/frontend/src/locales/de/rooms.json
+++ b/src/frontend/src/locales/de/rooms.json
@@ -79,7 +79,11 @@
       "support": "",
       "settings": "",
       "username": "",
-      "effects": ""
+      "effects": "",
+      "transcript": {
+        "start": "",
+        "stop": ""
+      }
     }
   },
   "effects": {
