📱(front) improve control bar responsive
We want the bottom bar to stay at the center of the screen.

Co-authored-by: Nathan Vasse <nathan.vasse@gmail.com>

--- a/src/frontend/src/locales/de/rooms.json
+++ b/src/frontend/src/locales/de/rooms.json
@@ -70,7 +70,8 @@
     "participants": {
       "open": "",
       "closed": ""
-    }
+    },
+    "support": ""
   },
   "options": {
     "buttonLabel": "",
