💩(frontend) introduce an official footer
Based on Florian's feedbacks, this is mandatory as the project is
getting attention.

Bad code, needs a refactor.

--- a/src/frontend/src/locales/de/global.json
+++ b/src/frontend/src/locales/de/global.json
@@ -24,5 +24,19 @@
   "notFound": {
     "heading": ""
   },
-  "submit": "OK"
+  "submit": "OK",
+  "footer": {
+    "links": {
+      "legifrance": "",
+      "infogouv": "",
+      "servicepublic": "",
+      "datagouv": "",
+      "legalsTerms": "",
+      "data": "",
+      "accessibility": "",
+      "ariaLabel": ""
+    },
+    "mentions": "",
+    "license": ""
+  }
 }
