--- a/src/frontend/src/locales/fr/rooms.json
+++ b/src/frontend/src/locales/fr/rooms.json
@@ -70,6 +70,10 @@
       "open": "Masquer les participants",
       "closed": "Afficher les participants"
     },
+    "transcript": {
+      "open": "Masquer l'assistant IA",
+      "closed": "Afficher l'assistant IA"
+    },
     "support": "Support"
   },
   "options": {
@@ -101,12 +105,14 @@
     "heading": {
       "participants": "Participants",
       "effects": "Effets",
-      "chat": "Messages dans l'appel"
+      "chat": "Messages dans l'appel",
+      "transcript": "Assistant IA"
     },
     "content": {
       "participants": "les participants",
       "effects": "les effets",
-      "chat": "les messages"
+      "chat": "les messages",
+      "transcript": "l'assistant IA"
     },
     "closeButton": "Masquer {{content}}"
   },
