🔥(frontend) remove transcription menu item
This menu item was replaced by a side panel.

--- a/src/frontend/src/locales/de/rooms.json
+++ b/src/frontend/src/locales/de/rooms.json
@@ -83,11 +83,7 @@
       "feedbacks": "",
       "settings": "",
       "username": "",
-      "effects": "",
-      "transcript": {
-        "start": "",
-        "stop": ""
-      }
+      "effects": ""
     }
   },
   "effects": {
