--- a/src/frontend/src/locales/fr/rooms.json
+++ b/src/frontend/src/locales/fr/rooms.json
@@ -82,11 +82,7 @@
       "feedbacks": "Partager votre avis",
       "settings": "Paramètres",
       "username": "Choisir votre nom",
-      "effects": "Appliquer des effets",
-      "transcript": {
-        "start": "Démarrer la transcription",
-        "stop": "Arrêter la transcription en cours"
-      }
+      "effects": "Appliquer des effets"
     }
   },
   "effects": {
