--- a/src/frontend/src/locales/fr/rooms.json
+++ b/src/frontend/src/locales/fr/rooms.json
@@ -163,5 +163,8 @@
     "raisedHands": "Mains levées",
     "lowerParticipantHand": "Baisser la main de {{name}}",
     "lowerParticipantsHand": "Baisser la main de tous les participants"
+  },
+  "recording": {
+    "label": "Enregistrement"
   }
 }
