--- a/src/frontend/src/locales/en/rooms.json
+++ b/src/frontend/src/locales/en/rooms.json
@@ -79,7 +79,7 @@
   "options": {
     "buttonLabel": "More Options",
     "items": {
-      "feedbacks": "Give us feedbacks",
+      "feedbacks": "Give us feedback",
       "settings": "Settings",
       "username": "Update Your Name",
       "effects": "Apply effects"
