✨(front) add blurring feature on join
This adds a button that opens a modal that allow user to enable
video effects on join screen.

--- a/src/frontend/src/locales/en/rooms.json
+++ b/src/frontend/src/locales/en/rooms.json
@@ -18,6 +18,10 @@
       "enable": "Enable microphone",
       "label": "Microphone"
     },
+    "effects": {
+      "description": "Apply effects",
+      "title": "Effects"
+    },
     "heading": "Join the meeting",
     "joinLabel": "Join",
     "joinMeeting": "Join meeting",
