✨(frontend) introduce a new option while creating room
Display a "personalized" link modal, inspired by Whereby.
The UX and the UI are still cumberstome, however it's fully
functional and accessible.

It's a "okay" v0, allowing users creating their custom link.
Thus we can study this feature traction, and decide whether or
not prioritize this feature in the UX.

--- a/src/frontend/src/locales/de/home.json
+++ b/src/frontend/src/locales/de/home.json
@@ -15,7 +15,8 @@
   "moreAbout": "",
   "createMenu": {
     "laterOption": "",
-    "instantOption": ""
+    "instantOption": "",
+    "personalizeOption": ""
   },
   "laterMeetingDialog": {
     "heading": "",
@@ -23,6 +24,23 @@
     "copy": "",
     "copied": "",
     "permissions": ""
+  },
+  "personalizeMeetingDialog": {
+    "heading": "",
+    "label": "",
+    "submit": "",
+    "placeholder": "",
+    "errors": {
+      "validation": {
+        "length": "",
+        "spaceOrSpecialCharacter": ""
+      },
+      "server": {
+        "taken": "",
+        "unknown": ""
+      }
+    },
+    "warning": ""
   },
   "introSlider": {
     "previous": {
