--- a/src/frontend/src/locales/fr/home.json
+++ b/src/frontend/src/locales/fr/home.json
@@ -15,7 +15,8 @@
   "moreAbout": "sur Visio",
   "createMenu": {
     "laterOption": "Créer une réunion pour une date ultérieure",
-    "instantOption": "Démarrer une réunion instantanée"
+    "instantOption": "Démarrer une réunion instantanée",
+    "personalizeOption": "Créer un lien personnalisé"
   },
   "laterMeetingDialog": {
     "heading": "Vos informations de connexion",
@@ -23,6 +24,23 @@
     "copy": "Copier le lien de la réunion",
     "copied": "Lien copié dans le presse-papiers",
     "permissions": "Les personnes disposant de ce lien n'ont pas besoin de votre autorisation pour rejoindre cette réunion."
+  },
+  "personalizeMeetingDialog": {
+    "heading": "Votre lien personnalisé",
+    "label": "Votre lien personnalisé",
+    "submit": "Créer",
+    "placeholder": "standupbizdev",
+    "errors": {
+      "validation": {
+        "length": "Doit contenir au moins 5 caractères.",
+        "spaceOrSpecialCharacter": "Ne peut pas contenir d'espaces ou de caractères spéciaux"
+      },
+      "server": {
+        "taken": "Déjà utilisé, veuillez essayer autre chose",
+        "unknown": "Une erreur inconnue s'est produite, veuillez réessayer"
+      }
+    },
+    "warning": "Ce lien permet un accès direct à la réunion. Choisissez un nom long et complexe pour limiter les accès non autorisés."
   },
   "introSlider": {
     "previous": {
