📝(frontend) add examples of the personalized link format
@manuhabitela create a well-documented modal for users trying to
join a meeting.

Update it with the last room's link format introduced.

--- a/src/frontend/src/locales/fr/home.json
+++ b/src/frontend/src/locales/fr/home.json
@@ -3,7 +3,7 @@
   "heading": "Visioconférences simples et sécurisées",
   "intro": "Communiquez et travaillez en toute simplicité, sans compromis sur votre souveraineté",
   "joinInputError": "Saisissez un lien ou un code de réunion. Exemples :",
-  "joinInputExample": "Un code de réunion ressemble à ceci : abc-defg-hij",
+  "joinInputExample": "Un code de réunion ressemble à ceci : abc-defg-hij ou teamalpha",
   "joinInputLabel": "Lien complet ou code de la réunion",
   "joinInputSubmit": "Rejoindre la réunion",
   "joinMeeting": "Rejoindre une réunion",
