--- a/src/frontend/src/locales/de/rooms.json
+++ b/src/frontend/src/locales/de/rooms.json
@@ -27,7 +27,9 @@
     "usernameLabel": "",
     "errors": {
       "usernameEmpty": ""
-    }
+    },
+    "cameraDisabled": "",
+    "cameraStarting": ""
   },
   "leaveRoomPrompt": "",
   "shareDialog": {
