🔍️(frontend) add link to the source code in the footer
Great idea suggested by @fflorent — totally worth it!

--- a/src/frontend/src/locales/de/global.json
+++ b/src/frontend/src/locales/de/global.json
@@ -34,7 +34,8 @@
       "legalsTerms": "",
       "data": "",
       "accessibility": "",
-      "ariaLabel": ""
+      "ariaLabel": "",
+      "code": ""
     },
     "mentions": "",
     "license": ""
