🩹(frontend) remove warning on modal without heading
The MuteAlertDialog was triggering accessibility warnings, lacking
a proper heading. Fix it.

--- a/src/frontend/src/locales/de/rooms.json
+++ b/src/frontend/src/locales/de/rooms.json
@@ -179,6 +179,7 @@
     "muteYourself": "",
     "muteParticipant": "",
     "muteParticipantAlert": {
+      "heading": "",
       "description": "",
       "confirm": "",
       "cancel": ""
