🚸(frontend) offer additionnal controls on participant tile
On hover, based on participant's type (remove/local) offer an
appropriate action. Either applying effects on the local participant
video or muting the remote participant.

This is a huge enhancement in term of UX, nobody was finding these two
controls in the current menus, and though the features were not
implemented.

--- a/src/frontend/src/locales/en/rooms.json
+++ b/src/frontend/src/locales/en/rooms.json
@@ -194,6 +194,8 @@
     "pin": {
       "enable": "Pin",
       "disable": "Unpin"
-    }
+    },
+    "effects": "Apply visual effects",
+    "muteParticipant": "Mute {{name}}"
   }
 }
