✨(frontend) add controls for full screen screenshare
Requested by several users.
Inspired by Jitsi.

Yet imperfect implementation. Controls on video element of
a screenshare should be disabled.

--- a/src/frontend/src/locales/de/rooms.json
+++ b/src/frontend/src/locales/de/rooms.json
@@ -197,6 +197,7 @@
       "disable": ""
     },
     "effects": "",
-    "muteParticipant": ""
+    "muteParticipant": "",
+    "fullScreen": ""
   }
 }
