--- a/src/frontend/src/locales/en/notifications.json
+++ b/src/frontend/src/locales/en/notifications.json
@@ -7,5 +7,6 @@
     "description": "{{name}} has raised their hand.",
     "cta": "Open waiting list"
   },
-  "muted": "{{name}} has muted your microphone. No participant can hear you."
+  "muted": "{{name}} has muted your microphone. No participant can hear you.",
+  "openChat": "Open chat"
 }
