🚸(frontend) add warning for full screen capture
Following user feedback about infinite loops risks, add warning overlay
when users attempt to share their entire screen. The warning explains
the risk and suggests sharing a specific tab instead, providing options
to stop sharing or dismiss the warning while respecting user preferences
for future sessions.

--- a/src/frontend/src/locales/de/rooms.json
+++ b/src/frontend/src/locales/de/rooms.json
@@ -199,5 +199,10 @@
     "effects": "",
     "muteParticipant": "",
     "fullScreen": ""
+  },
+  "fullScreenWarning": {
+    "message": "",
+    "stop": "",
+    "ignore": ""
   }
 }
