--- a/src/frontend/src/locales/en/rooms.json
+++ b/src/frontend/src/locales/en/rooms.json
@@ -198,5 +198,10 @@
     "effects": "Apply visual effects",
     "muteParticipant": "Mute {{name}}",
     "fullScreen": "Full screen"
+  },
+  "fullScreenWarning": {
+    "message": "To avoid infinite loop display, do not share your entire screen or browser window. Instead, share a tab or another window.",
+    "stop": "Stop presenting",
+    "ignore": "Ignore"
   }
 }
