--- a/src/frontend/src/locales/fr/rooms.json
+++ b/src/frontend/src/locales/fr/rooms.json
@@ -198,5 +198,10 @@
     "effects": "Appliquer des effets",
     "muteParticipant": "Couper le micro de {{name}}",
     "fullScreen": "Plein écran"
+  },
+  "fullScreenWarning": {
+    "message": "Pour éviter l'affichage en boucle infinie, ne partagez pas l'intégralité de votre écran ni de votre fenêtre de navigateur. Partagez plutôt un onglet ou une autre fenêtre.",
+    "stop": "Arrêter la présentation",
+    "ignore": "Ignorer"
   }
 }
