✨(frontend) lower hand autonomously for active speakers
Users requested that their raised hands be lowered automatically if they become
the active speaker. This change ensures a more natural experience during
discussions, preventing user from forgetting to lower their hand while speaking.

--- a/src/frontend/src/locales/fr/notifications.json
+++ b/src/frontend/src/locales/fr/notifications.json
@@ -8,5 +8,9 @@
     "cta": "Ouvrir la file d'attente"
   },
   "muted": "{{name}} a coupé votre micro. Aucun participant ne peut l'entendre.",
-  "openChat": "Ouvrir le chat"
+  "openChat": "Ouvrir le chat",
+  "lowerHand": {
+    "auto": "Il semblerait que vous ayez pris la parole, donc la main va être\n          baissée.",
+    "dismiss": "Laisser la main levée"
+  }
 }
