--- a/src/frontend/src/locales/de/notifications.json
+++ b/src/frontend/src/locales/de/notifications.json
@@ -8,5 +8,9 @@
     "cta": ""
   },
   "muted": "",
-  "openChat": ""
+  "openChat": "",
+  "lowerHand": {
+    "auto": "",
+    "dismiss": ""
+  }
 }
